Adds feature to Invoke-IcingaCheckCPU to report top 10 consuming process information

--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -48,6 +48,10 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             }}
             order = 100
         }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+            order = 99
+        }
         "-Core" = {
             set_if = {{
                 var str = macro("$IcingaCheckCPU_String_Core$"); if (len(str) == 0) { return false; }; return true;
@@ -76,8 +80,12 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Object_Critical$"
             order = 3
         }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        "-OverallTotalAsSum" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
+            order = 99
+        }
+        "-DisableProcessList" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_DisableProcessList$"
             order = 99
         }
         "-OverallOnly" = {
@@ -87,6 +95,9 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
     }
     vars.IcingaCheckCPU_Switchparameter_OverallOnly = false
     vars.ifw_api_arguments = {
+        "DisableProcessList" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_DisableProcessList$"
+        }
         "ThresholdInterval" = {
             value = "$IcingaCheckCPU_String_ThresholdInterval$"
         }
@@ -108,10 +119,15 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
         }
+        "OverallTotalAsSum" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
+        }
         "Verbosity" = {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
+    vars.IcingaCheckCPU_Switchparameter_DisableProcessList = false
+    vars.IcingaCheckCPU_Switchparameter_OverallTotalAsSum = false
     vars.ifw_api_command = "invoke-icingacheckcpu"
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
