--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -3153,7 +3153,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 99
         }
         "-CriticalTotalSize" = {
-            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the total folder size of all files of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalTotalSize$"
             order = 7
         }
@@ -3353,7 +3353,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 99
         }
         "-WarningTotalSize" = {
-            description = "Checks the resulting file count of the provided filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the total folder size of all files of the provided filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_WarningTotalSize$"
             order = 6
         }
@@ -3363,7 +3363,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 12
         }
         "-WarningLargestFile" = {
-            description = "Checks the largest file size found for the given filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the resulting file count of the provided filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_WarningLargestFile$"
             order = 10
         }
@@ -3378,7 +3378,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 9
         }
         "-CriticalAverageFile" = {
-            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the average file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalAverageFile$"
             order = 13
         }
@@ -3497,7 +3497,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -3882,7 +3882,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -4274,6 +4274,10 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             }}
             order = 100
         }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+            order = 99
+        }
         "-Core" = {
             set_if = {{
                 var str = macro("$IcingaCheckCPU_String_Core$"); if (len(str) == 0) { return false; }; return true;
@@ -4302,8 +4306,12 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Object_Critical$"
             order = 3
         }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        "-OverallTotalAsSum" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
+            order = 99
+        }
+        "-DisableProcessList" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_DisableProcessList$"
             order = 99
         }
         "-OverallOnly" = {
@@ -4313,6 +4321,9 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
     }
     vars.IcingaCheckCPU_Switchparameter_OverallOnly = false
     vars.ifw_api_arguments = {
+        "DisableProcessList" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_DisableProcessList$"
+        }
         "ThresholdInterval" = {
             value = "$IcingaCheckCPU_String_ThresholdInterval$"
         }
@@ -4334,10 +4345,15 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
         }
+        "OverallTotalAsSum" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
+        }
         "Verbosity" = {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
+    vars.IcingaCheckCPU_Switchparameter_DisableProcessList = false
+    vars.IcingaCheckCPU_Switchparameter_OverallTotalAsSum = false
     vars.ifw_api_command = "invoke-icingacheckcpu"
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
@@ -4773,7 +4789,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4791,7 +4807,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for all other updates on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -4819,7 +4835,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -4871,12 +4887,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the security update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
