Adds support to Invoke-IcingaCheckPartitionSpace to define mandatory partitions which should always be present

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -533,7 +533,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckPartitionSpace_Int32_Verbosity$"
-            order = 6
+            order = 7
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -621,6 +621,29 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             }}
             order = 5
         }
+        "-RequiredPartition" = {
+            description = "Allows to define a list of partitions which should be included in the check. e.g. 'C:','D:'  In case they are missing, the plugin will report CRITICAL"
+            value = {{
+                var arr = macro("$IcingaCheckPartitionSpace_Array_RequiredPartition$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 6
+        }
         "-SkipUnknown" = {
             set_if = "$IcingaCheckPartitionSpace_Switchparameter_SkipUnknown$"
             order = 99
@@ -629,6 +652,9 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
     vars.ifw_api_arguments = {
         "Verbosity" = {
             value = "$IcingaCheckPartitionSpace_Int32_Verbosity$"
+        }
+        "RequiredPartition" = {
+            value = "$IcingaCheckPartitionSpace_Array_RequiredPartition$"
         }
         "ThresholdInterval" = {
             value = "$IcingaCheckPartitionSpace_String_ThresholdInterval$"
@@ -3543,7 +3569,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 10
         }
         "-CriticalTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -4810,7 +4836,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4856,7 +4882,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -4866,7 +4892,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
@@ -4908,7 +4934,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
