--- a/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
@@ -5,7 +5,7 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckPartitionSpace_Int32_Verbosity$"
-            order = 6
+            order = 7
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -93,6 +93,29 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             }}
             order = 5
         }
+        "-RequiredPartition" = {
+            description = "Allows to define a list of partitions which should be included in the check. e.g. 'C:','D:'  In case they are missing, the plugin will report CRITICAL"
+            value = {{
+                var arr = macro("$IcingaCheckPartitionSpace_Array_RequiredPartition$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 6
+        }
         "-SkipUnknown" = {
             set_if = "$IcingaCheckPartitionSpace_Switchparameter_SkipUnknown$"
             order = 99
@@ -101,6 +124,9 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
     vars.ifw_api_arguments = {
         "Verbosity" = {
             value = "$IcingaCheckPartitionSpace_Int32_Verbosity$"
+        }
+        "RequiredPartition" = {
+            value = "$IcingaCheckPartitionSpace_Array_RequiredPartition$"
         }
         "ThresholdInterval" = {
             value = "$IcingaCheckPartitionSpace_String_ThresholdInterval$"
