Adds support for Acknowledgement events

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1120,7 +1120,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         "-Before" = {
             description = "Defines the end point on which timeframe the plugin will stop to read event log information. Using 2h as argument as example, will ignore all events of the past 2 hours from the time the plugin was executed. This should be used in combination with the '-After' argument. As example, you could provide '-After 6h' to start reading all eventlogs from the past 6 hours, and use '-Before 2h' to skip the last 2 hours. In this scenario, would receive 4 hours of eventlogs, while the last 2 hours have been ignored. For thresholds you can be very specific by providing the time in a time format or by using simple time metrics by their units. Examples:  '2024/01/01 12:00:00': Will stop reading eventlogs after the 1st January 2024 12:00 CET '2024/01/15': Will stop reading eventlogs after the 15th January 2024 00:00 CET '4h': Will ignore eventlogs of the past 4 hours '1d': Will ignore eventlogs of the past day (24 hours)  Allowed units for time metrics: ms, s, m, h, d, w, M, y  Example ``` Start of EventLog        Plugin Execution v         After 6h           Before 2h  v |-------------|------------------|------| 8:00        10:00              14:00    16:00 | Not fetched | Fetched          | Not fetched```"
             value = "$IcingaCheckEventlog_Object_Before$"
-            order = 16
+            order = 18
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckEventlog_Switchparameter_NoPerfData$"
@@ -1175,6 +1175,29 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         "-After" = {
             description = "Defines the starting point on which timeframe the plugin will start to read event log information. Using 4h as argument as example, will provide all entries from the time the plugin was executed to the past 4 hours. For thresholds you can be very specific by providing the time in a time format or by using simple time metrics by their units. Examples:  '2024/01/01 12:00:00': Will start reading eventlogs after the 1st January 2024 12:00 CET '2024/01/15': Will start reading eventlogs after the 15th January 2024 00:00 CET '4h': Will read the past 4 hours '1d': Will read the past day (24 hours)  Allowed units for time metrics: ms, s, m, h, d, w, M, y  Example ``` Start of EventLog       Plugin Execution v                After 4h              v |--------------------|-----------------| 10:00              12:00           16:00 | Not fetched        | Fetched         |```"
             value = "$IcingaCheckEventlog_Object_After$"
+            order = 17
+        }
+        "-ProblemIds" = {
+            description = "Used to specify an array of event IDs that should be marked as problems. These event IDs will be compared to the provided AcknowledgeIds. If no event ID for an AcknowledgeId is found after the corresponding problem event ID has occurred, it will be marked as a problem. If you provide multiple ProblemIds, you must specify the same number of AcknowledgeIds. If you have multiple ProblemIds but only one AcknowledgeId, you need to add the AcknowledgeId multiple times to the AcknowledgeIds array."
+            value = {{
+                var arr = macro("$IcingaCheckEventlog_Array_ProblemIds$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
             order = 15
         }
         "-IncludeEventId" = {
@@ -1331,12 +1354,35 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         "-MaxEntries" = {
             description = "Allows to limit the amount of log entries fetched by Get-WinEvent, to increase performance and reduce system load impact Should match the average amount of log files written for the intended time range filtered"
             value = "$IcingaCheckEventlog_Int32_MaxEntries$"
-            order = 17
+            order = 19
+        }
+        "-AcknowledgeIds" = {
+            description = "Used to specify an array of event IDs that should be marked as acknowledged. These event IDs will be compared to the provided ProblemIds. If no event ID for a ProblemId is found it will be marked as a problem. If you provide multiple ProblemIds, you must specify the same number of AcknowledgeIds. If you have multiple ProblemIds but only one AcknowledgeId, you need to add the AcknowledgeId multiple times to this array."
+            value = {{
+                var arr = macro("$IcingaCheckEventlog_Array_AcknowledgeIds$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
+            order = 16
         }
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckEventlog_Int32_Verbosity$"
-            order = 18
+            order = 20
         }
         "-ExcludeEventId" = {
             description = "Used to specify an array of events identified by their id to be excluded."
@@ -1424,6 +1470,9 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
     }
     vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = false
     vars.ifw_api_arguments = {
+        "AcknowledgeIds" = {
+            value = "$IcingaCheckEventlog_Array_AcknowledgeIds$"
+        }
         "IncludeEventId" = {
             value = "$IcingaCheckEventlog_Array_IncludeEventId$"
         }
@@ -1480,6 +1529,9 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         }
         "ExcludeMessage" = {
             value = "$IcingaCheckEventlog_Array_ExcludeMessage$"
+        }
+        "ProblemIds" = {
+            value = "$IcingaCheckEventlog_Array_ProblemIds$"
         }
         "Verbosity" = {
             value = "$IcingaCheckEventlog_Int32_Verbosity$"
@@ -3523,7 +3575,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
 
     arguments += {
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 8
         }
@@ -3908,7 +3960,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -4836,7 +4888,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4854,12 +4906,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for all other updates on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -4882,7 +4934,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -4892,7 +4944,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
