Adds option to limit thread CPU usage to 100% for CPU plugin

--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -48,6 +48,10 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             }}
             order = 100
         }
+        "-Limit100Percent" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_Limit100Percent$"
+            order = 99
+        }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
             order = 99
@@ -104,6 +108,9 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "SocketFilter" = {
             value = "$IcingaCheckCPU_Array_SocketFilter$"
         }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        }
         "Critical" = {
             value = "$IcingaCheckCPU_Object_Critical$"
         }
@@ -116,8 +123,8 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "Warning" = {
             value = "$IcingaCheckCPU_Object_Warning$"
         }
-        "NoPerfData" = {
-            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        "Limit100Percent" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_Limit100Percent$"
         }
         "OverallTotalAsSum" = {
             set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
@@ -126,8 +133,9 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
+    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
     vars.IcingaCheckCPU_Switchparameter_DisableProcessList = false
     vars.IcingaCheckCPU_Switchparameter_OverallTotalAsSum = false
     vars.ifw_api_command = "invoke-icingacheckcpu"
-    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
+    vars.IcingaCheckCPU_Switchparameter_Limit100Percent = false
 }
