--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -3371,7 +3371,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 99
         }
         "-CriticalLargestFile" = {
-            description = "Checks the largest file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalLargestFile$"
             order = 11
         }
@@ -3451,12 +3451,12 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 5
         }
         "-CriticalSmallestFile" = {
-            description = "Checks the smallest file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalSmallestFile$"
             order = 9
         }
         "-CriticalAverageFile" = {
-            description = "Checks the average file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalAverageFile$"
             order = 13
         }
@@ -3960,7 +3960,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -4373,6 +4373,10 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             }}
             order = 100
         }
+        "-Limit100Percent" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_Limit100Percent$"
+            order = 99
+        }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
             order = 99
@@ -4429,6 +4433,9 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "SocketFilter" = {
             value = "$IcingaCheckCPU_Array_SocketFilter$"
         }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        }
         "Critical" = {
             value = "$IcingaCheckCPU_Object_Critical$"
         }
@@ -4441,8 +4448,8 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         "Warning" = {
             value = "$IcingaCheckCPU_Object_Warning$"
         }
-        "NoPerfData" = {
-            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        "Limit100Percent" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_Limit100Percent$"
         }
         "OverallTotalAsSum" = {
             set_if = "$IcingaCheckCPU_Switchparameter_OverallTotalAsSum$"
@@ -4451,10 +4458,11 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "$IcingaCheckCPU_Int32_Verbosity$"
         }
     }
+    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
     vars.IcingaCheckCPU_Switchparameter_DisableProcessList = false
     vars.IcingaCheckCPU_Switchparameter_OverallTotalAsSum = false
     vars.ifw_api_command = "invoke-icingacheckcpu"
-    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
+    vars.IcingaCheckCPU_Switchparameter_Limit100Percent = false
 }
 
 object CheckCommand "Invoke-IcingaCheckTCP" {
@@ -4888,7 +4896,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -4911,7 +4919,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 12
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -4949,7 +4957,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the rollup update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -4991,7 +4999,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the security update count on the Windows machine"
+            description = "The critical threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
